argo/apps/media/readarr/service.yaml
# apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
spec:
  selector:
    app: readarr
  ports:
    - name: http
      port: 80
      targetPort: 8787
