argo/apps/media/readarr/ingress.yaml
    # Middleware: redirect HTTP -> HTTPS
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: readarr-redirect-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# IngressRoute for HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.smeyer.ca`)
      kind: Rule
      services:
        - name: readarr
          port: 80
  tls:
    certResolver: letsencrypt
---
# IngressRoute for HTTP (only used for redirect)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`readarr.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: readarr-redirect-https
      services:
        - name: readarr
          port: 80
